--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poiret+One&family=Quintessential&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poiret+One&family=Quintessential&display=swap'); */
 @import "tailwindcss";
 
 @theme {
